# scot

./: .gitignore  Cargo.toml  README.md  bb-locus-31.csv
benches/: cct.rs
book/: book.toml
book/src/: SUMMARY.md  intro.md  legal.md
book/src/differences/: ciecam02.md  index.md
book/src/models/: ciecam.md  cielab.md  cieluv.md  cieuvw.md  ciexyz.md  index.md
book/theme/: head.hbs  index.hbs
book/theme/css/: custom-index.css
colorado-charts/: Cargo.toml  README.md
colorado-charts/src/: lib.rs
colorado-charts/tests/: test_swatches.rs
colorado-checker/: Cargo.toml  README.md
colorado-checker/src/: checker.rs  lib.rs
colorado-cri/: README.md
colorado-cri/src/: lib.rs
colorado-munsell/: Cargo.toml  README.md
colorado-munsell/src/: lib.rs  matt.rs  matt_splines.rs  renotation.rs
colorado-munsell/tests/: test_munsell.rs
colorado-tm30/: Cargo.toml
colorado-tm30/src/: ces.rs  fluorescent_ies_tm30.rs  hid_ies_tm30.rs  illuminants.rs  incandescent_ies_tm30.rs  led_ies_tm30.rs  lib.rs  samples.rs  tm30.rs  tm30_illuminants.rs
colorado-tm30/src/samples/: data.rs  mod.md  samples.md
colorado-tm30/src/tm30_illuminants/: data.rs
colorado-tm30/tests/: test_tm30_data.rs
examples/: bb-locus.rs
examples/difference/: main.rs
rcs-charts/: Cargo.toml  README.md
rcs-charts/tests/: test_swatches.rs
rcs-cri/: Cargo.toml  README.md
rcs-cri/src/: tcs.rs
rcs-munsell/: Cargo.toml  README.md
rcs-munsell/src/: gloss.rs  lib.rs  matt.rs  renotation.rs
rcs-munsell/tests/: test_munsell.rs
rcs-testcharts/: Cargo.toml  README.md
rcs-testcharts/src/: babel.rs  lib.rs  ohta.rs
rcs-tm30/: Cargo.toml
rcs-tm30/src/: ces.rs
rcs-tm30/src/samples/: mod.rs
rcs-tm30/tests/: test_tm30_data.rs
scot-cri/: Cargo.toml  README.md
scot-munsell/: Cargo.toml  README.md
scot-munsell/src/: gloss.rs
scot-testcharts/src/: babel.rs
scot-testcharts/tests/: test_swatches.rs
scot-tm30/src/: ces.rs
scot-tm30/src/samples/: mod.rs
src/: README.md  blackbody.rs  cct.rs  cie.rs  cie1931.rs  differences.rs  domain.rs  illuminants.rs  interpolate.rs  lib.rs  math.rs  models.rs  observer.rs  observers.rs  physics.rs  spectra.rs  step.rs  swatches.rs  units.rs  xyz.rs
src/cie/: lab.rs  mod.rs  xyz.rs
src/differences/: ciede00.rs  ciede76.rs  ciede94.rs  de1976.rs  de1994.rs  mod.rs
src/illuminants/: blackbody.rs  cct.rs  cct_parameters.rs  daylight.rs  fluorescent.rs  fluorescent_cie.rs  fluorescent_data.rs  fluorescent_ies_tm30.rs  hid.rs  hid_cie.rs  hid_data.rs  hid_ies_tm30.rs  incandescent.rs  incandescent_data.rs  incandescent_ies_tm30.rs  led.rs  led_cie.rs  led_data.rs  led_ies_tm30.rs  mod.rs
src/models/: README.md  cam02.md  cam02.rs  ciecam02.rs  cielab.rs  lab.rs  mod.md  mod.rs  uvw.rs  xyz.rs  yuv.rs  yuv1960.rs
src/models/cam02/: README.md  cam.rs  jch.rs  ucs.rs
src/models/ciecam02/: cam.rs  ciecam02.md  jch.rs  mod.md  mod.rs  ucs.rs
src/observers/: cie1931.rs  cie1931_data.rs  cie1964.rs  cie1964_data.rs  cie_f10.rs  cie_f2.rs  mod.rs
src/swatches/: ces.rs  checker.rs  data_swatch.rs  mod.md  mod.rs  munsell_matt.rs  munsell_renotation.rs  spline_swatch.rs  tcs.rs
src/util/: domain.rs  interpolate.rs  math.rs  mod.rs  physics.rs  spectra.rs  step.rs  units.rs
tests/: test_hid.rs  test_incandescent.rs  test_led.rs  test_munsell.rs  test_swatches.rs
xie-charts/: README.md
xie-charts/src/: babel.rs  ohta.rs
xie-cri/: Cargo.toml
xie-cri/src/: tcs.rs
xie-munsell/: Cargo.toml  README.md
xie-munsell/src/: gloss.rs  lib.rs  matt.rs  matt_splines.rs
xie-tm30/: Cargo.toml
xie-tm30/src/: ces.rs
xie-tm30/src/samples/: mod.rs
xie-tm30/tests/: test_tm30_data.rs
