[package]
name = "colorado"
version = "0.0.0"
description = "Color Sience algorithms and datasets, for research and color management in lighting, graphic arts, and displays"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/colorado"
keywords = ["color science", "CIE", "chromaticity", "CRI", "CIECAM"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.27"
#once_cell = "1.8"
#num = "0.4.0"
approx = "0.5"
