[package]
name = "colorado"
version = "0.1.0"
description = "Color Sience algorithms and datasets, for research and color management in lighting, graphic arts, and displays"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/colorado"
keywords = ["color science", "CIE", "chromaticity", "CRI", "CIECAM"]
edition = "2018"
license = "MIT OR Apache-2.0"
#readme = "src/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.27"
#once_cell = "1.8"
num = "0.4"
maplit = "1.0" # hashmap! macro
spliny = {git ="https://github.com/harbik/spliny",  version = "0.1"}
approx = "0.5"

[dev-dependencies]
criterion = "0.3"


[features]
default = ["cie_illuminants", "quality"]
cie_illuminants = [
	"cie_incandescent_illuminants",
	"cie_fluorescent_illuminants", 
	"cie_hid_illuminants", 
	"cie_led_illuminants", 
	]
cie_incandescent_illuminants = []
cie_fluorescent_illuminants = []
cie_hid_illuminants = []
cie_led_illuminants = []


quality = [
	"cri", 
	"tm30", 
	"checker"
	]
cri = []
tm30 = []
checker = []

[[bench]]
name = "cct"
harness = false
