[package]
name = "colorado-charts"
version = "0.1.0"
edition = "2018"
description = "Color test charts, typically used for calibration of displays and scanners"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/colorado"
keywords = ["color science", "CIE", "chromaticity", "CRI", "CIECAM"]
license = "MIT OR Apache-2.0"

[dependencies]
nalgebra = "0.27"
colorado = { path="../" }
approx = "0.5"