[package]
name = "scot-testcharts"
version = "0.0.1"
edition = "2018"
description = "Color test charts, typically used for calibration of displays and scanners"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/scot"
keywords = ["color science", "CIE", "chromaticity", "CRI", "CIECAM"]
license = "MIT OR Apache-2.0"

[dependencies]
nalgebra = "0.27"
scot = {git ="https://github.com/harbik/scot",  version = "0.0.1"}
approx = "0.5"