[package]
name = "rcs-tm30"
version = "0.1.0"
edition = "2018"
description = "Color Sience algorithms and datasets, for research and color management in lighting, graphic arts, and displays"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/rcs"
keywords = ["color science", "CIE", "chromaticity", "CRI", "CIECAM"]
license = "MIT OR Apache-2.0"

[dependencies]
nalgebra = "0.27"
rcs = { path="../" }
approx = "0.5"

[features]
default = ["samples"]
samples = []