[package]
name = "scot-tm30"
version = "0.0.1"
edition = "2018"
description = "Color Sience algorithms and datasets, for research and color management in lighting, graphic arts, and displays"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/scot"
keywords = ["color science", "CIE", "chromaticity", "CRI", "CIECAM"]
license = "MIT OR Apache-2.0"

[dependencies]
nalgebra = "0.27"
scot = {git ="https://github.com/harbik/scot",  version = "0.0.1"}
approx = "0.5"

[features]
default = ["samples"]
samples = []